styles.css
@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');

body {
  background-color: #141414;
  color: white;
  display: grid;
  place-items: center;
  min-height: 100vh;
  font-family: 'Inter';
  font-weight: 300;
}

.container {
  display: flex;
  flex-direction: column;
  align-items: center;
  background-color: #1F1F1F;
  max-height: 750px;
  max-width: 380px;
  height: 90%;
  width: 90%;
  border-radius: 10px;
}

.profile {
  border-radius: 100px;
  width: 100px;
  margin: 20px;
}

.name {
  font-weight: 400;
  font-size: 1.8rem;
  margin: 0;
}

.location {
  font-weight: 450;
  color: hsl(75, 94%, 57%);
  font-size: 1rem;
  margin: 5px 0 10px 0;
}

.description {
  font-size: 0.9rem;
  margin: 10px 0 15px 0;
}

.links {
  background-color: #333333;
  text-decoration: none;
  color: white;
  font-weight: 500;
  border-radius: 10px;
  margin: 8px;
  width: 85%;
  height: 50px;
  display: grid;
  place-items: center;
  transition: transform 0.3s ease, background-color 0.3s ease;
}

.links:hover {
  background-color: hsl(75, 94%, 57%);
  color: #1F1F1F;
  transform: scale(1.05)
}
/*
  Josh's Custom CSS Reset
  https://www.joshwcomeau.com/css/custom-css-reset/
*/

*, *::before, *::after {
    box-sizing: border-box;
  }
  
  *:not(dialog) {
    margin: 0;
  }
  
  @media (prefers-reduced-motion: no-preference) {
    html {
      interpolate-size: allow-keywords;
    }
  }
  
  body {
    line-height: 1.5;
    -webkit-font-smoothing: antialiased;
  }
  
  img, picture, video, canvas, svg {
    display: block;
    max-width: 100%;
  }
  
  input, button, textarea, select {
    font: inherit;
  }
  
  p, h1, h2, h3, h4, h5, h6 {
    overflow-wrap: break-word;
  }
  
  p {
    text-wrap: pretty;
  }
  h1, h2, h3, h4, h5, h6 {
    text-wrap: balance;
  }
  
  #root, #__next {
    isolation: isolate;
  }

